icons, is now disabled by default.

* Update GUI look-and-feel to current FlatLaf 3.6, with native library
support on all Isabelle platforms (now including arm64-linux).

* Additional look-and-feels "FlatLaf macOS Light" and "FlatLaf macOS
Dark" imitate original macOS more closely. This is the default for the
bundled application on macOS.

* GUI rendering of the gutter is now more accurate, using scaled icons
to fit precisely into the available space.

* GUI rendering for dark look-and-feels has been slightly improved:
colors and icons, notably the menu accelerator font/color.

* Explicit support for dark GUI themes: FlatLaf tells wether a Swing
look & feel is dark or non-dark (default); jEdit options with suffix
".dark" and Isabelle options with suffix "_dark" determine GUI rendering
in dark mode. The panels for "Global Options" and "Plugin Options /
Isabelle / Rendering" operate on options according to the current Swing
look & feel, e.g. on "view.fgColor.dark" in dark mode vs. "view.fgColor"
in non-dark mode.

* Provide scalable icons for old-fashioned "tango" (from early Gnome or
KDE), and "idea-icons" from current IntelliJ IDEA community edition. All
icons are available for jEdit and Isabelle/jEdit add-ons. The special
notation "myicon.svg?scale=0.5" allows to resize icons as specified in
jEdit properties. The default properties of Isabelle/jEdit usually
prefer scalable icons over fixed old bitmaps, but some notable icons are
not available as SVG.


*** Pure ***

* Command 'thy_deps' expects optional theory arguments as long theory names,
the same way as the 'imports' clause. Minor INCOMPATIBILITY.

* ML function 'Raw_Simplifier.rewrite' renamed to 'Raw_Simplifier.rewrite_wrt',
to avoid clash with existing 'Simplifier.rewrite'. INCOMPATIBILITY.


*** HOL ***

* Consolidated auxiliary operations intended for code generation:

    const Set.is_empty
    thm is_empty_def ~> Set.is_empty_iff [simp]

    const Set.remove
    thm remove_def ~> Set.remove_eq [simp]
