@@ -196,6 +196,7 @@ cb9f061ccd7c6f90d00c8aa115aeea8679f3f996 isabelle_setup-20221028.tar.gz
 f582c621471583d06e00007c6acc01376c7395af isabelle_setup-20230206.tar.gz
 d30109fe63cec35c31cee9ffd17ae3a13c1e6a33 isabelle_setup-20230922.tar.gz
 cd92c141883f0f6a18adceb885316c8b6119e648 isabelle_setup-20240327.tar.gz
+ed96100db1c7fd0beee0c93929609cab42e952b8 isabelle_setup-20250613.tar.gz
 f23037b322b968c61350f9ec9995a4f397e6c71c javamail-1.4.7.tar.gz
 18e6b60ceb98e327fbf14e52f4613dd5b0483d2f javamail-20240109.tar.gz
 dc826bc0d715cd4190d1bb2e7122321eea5355de javamail-20250122.tar.gz
