@@ -12,7 +12,7 @@ find_facts_web-20250223
 flatlaf-3.6-2
 foiltex-2.1.4b
 isabelle_fonts-20241227
-isabelle_setup-20240327
+isabelle_setup-20250613
 javamail-20250122
 jdk-21.0.6
 jedit-20250521
