@@ -1,12 +1,0 @@
-#!/usr/bin/env bash
-#
-# java-gui-setup --- platform-specific setup for Java/Swing GUI applications
-
-case "$ISABELLE_PLATFORM_FAMILY" in
-  macos*)
-    JAVA_VERSION="$("$ISABELLE_JDK_HOME/bin/java" -version 2>&1 | head -n 1 | cut -d '"' -f2)"
-    JAVA_DOMAIN="com.azul.zulu.${JAVA_VERSION}.java"
-    defaults read "$JAVA_DOMAIN" AppleWindowTabbingMode >/dev/null 2>/dev/null ||
-      defaults write "$JAVA_DOMAIN" AppleWindowTabbingMode manual >/dev/null 2>/dev/null
-    ;;
-esac
