@@ -306,7 +306,7 @@ source "$COMPONENT/etc/settings"
 
 declare -a JAVA_OPTIONS=($(grep -v '^#' "$ISABELLE_HOME/Isabelle.options"))
 
-"$ISABELLE_HOME/bin/isabelle" env "$ISABELLE_HOME/lib/scripts/java-gui-setup"
+eval $(isabelle java isabelle.setup.Setup gui_setup)
 
 exec "$ISABELLE_JDK_HOME/bin/java" \
   "-Disabelle.root=$ISABELLE_HOME" "${JAVA_OPTIONS[@]}" \
@@ -665,19 +665,6 @@ exec "$ISABELLE_JDK_HOME/bin/java" \
 
         platform match {
           case Platform.Family.linux_arm | Platform.Family.linux =>
-            File.change(isabelle_target + jedit_options) {
-              _.replaceAll("jedit_reset_font_size : int =.*", "jedit_reset_font_size : int = 24")
-            }
-
-            File.change(isabelle_target + jedit_props) {
-              _.replaceAll("console.fontsize=.*", "console.fontsize=18")
-               .replaceAll("helpviewer.fontsize=.*", "helpviewer.fontsize=18")
-               .replaceAll("metal.primary.fontsize=.*", "metal.primary.fontsize=18")
-               .replaceAll("metal.secondary.fontsize=.*", "metal.secondary.fontsize=18")
-               .replaceAll("view.fontsize=.*", "view.fontsize=24")
-               .replaceAll("view.gutter.fontsize=.*", "view.gutter.fontsize=16")
-            }
-
             make_isabelle_options(
               isabelle_target + Path.explode("Isabelle.options"), java_options)
 
