@@ -11,8 +11,8 @@ object Platform {
   /* platform family */
 
   val is_windows: Boolean = isabelle.setup.Environment.is_windows()
-  val is_linux: Boolean = System.getProperty("os.name", "") == "Linux"
-  val is_macos: Boolean = System.getProperty("os.name", "") == "Mac OS X"
+  val is_linux: Boolean = isabelle.setup.Environment.is_linux()
+  val is_macos: Boolean = isabelle.setup.Environment.is_macos()
   val is_unix: Boolean = is_linux || is_macos
 
   def is_arm: Boolean = cpu_arch.startsWith("arm")
