@@ -4,5 +4,6 @@ sources = \
   src/Build.java \
   src/Environment.java \
   src/Exn.java \
+  src/GUI_Setup.java \
   src/Library.java \
   src/Setup.java
